<resources>
    <string name="app_name">SYM_Labo2</string>
    <string name="activity_1">ACTIVITY 1</string>
    <string name="activity_2">ACTIVITY 2</string>
    <string name="activity_3">ACTIVITY 3</string>
    <string name="activity_4">ACTIVITY 4</string>
    <string name="activity_5">ACTIVITY 5</string>
    <string name="activity_1_title">ASYNCRONE</string>
    <string name="activity_2_title">DIFEREE</string>
    <string name="activity_3_title">JSON-XML</string>
    <string name="activity_4_title">COMPRESEE</string>
    <string name="activity_5_title">GRAPHQL</string>
    <string name="url">http://sym.iict.ch/</string>
    <string name="sent">sent</string>
    <string name="received">received</string>
</resources>