<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity1"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/activity_1"
        android:textStyle="bold"
        android:textSize="40sp"
        android:fontFamily="monospace"/>

    <TextView
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:text="@string/activity_1_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="monospace"/>

    <TextView
        android:id="@+id/sent_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/type"
        android:text="@string/sent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="monospace"/>

    <TextView
        android:id="@+id/sent_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sent_txt"
        android:text="@string/sent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="monospace"
        android:background="@drawable/sent_content_background"/>

    <TextView
        android:id="@+id/received_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sent_content"
        android:text="@string/received"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="monospace"/>

    <TextView
        android:id="@+id/received_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/received_txt"
        android:text="@string/sent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="monospace"
        android:background="@drawable/received_content_background"/>
</androidx.constraintlayout.widget.ConstraintLayout>